[gd_scene load_steps=6 format=3 uid="uid://c82q6rdj5f5ix"]

[ext_resource type="Texture2D" uid="uid://2cbl24t405i5" path="res://assets/ui/panels/Paper texture.png" id="1_mhvoi"]
[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_v8cfc"]
[ext_resource type="Texture2D" uid="uid://ubj4p0nnxbyo" path="res://assets/ui/buttons/play.png" id="2_pyk42"]
[ext_resource type="Texture2D" uid="uid://qfrd00anmh3g" path="res://assets/ui/buttons/settings.png" id="3_ovivv"]
[ext_resource type="Texture2D" uid="uid://cwrb10ipoorl6" path="res://assets/ui/buttons/exit.png" id="4_a4f63"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8cfc")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mhvoi")
region_rect = Rect2(82.6887, 0, 1837.31, 1080)
patch_margin_top = 74
patch_margin_right = 77
patch_margin_bottom = 60

[node name="start_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0323194
anchor_top = 0.787
anchor_right = 0.331319
anchor_bottom = 0.979938
offset_left = -0.232002
offset_top = 0.0239563
offset_right = 0.320038
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_pyk42")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="settings_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.350028
anchor_top = 0.787
anchor_right = 0.649028
anchor_bottom = 0.979938
offset_left = -0.231995
offset_top = 0.0239563
offset_right = 0.320007
offset_bottom = 6.10352e-05
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_ovivv")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="exit_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.666
anchor_top = 0.787
anchor_right = 0.965
anchor_bottom = 0.979938
offset_left = -0.232002
offset_top = 0.0239563
offset_right = 0.320007
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_a4f63")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1
